--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7"
